overflow correction

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -5,7 +5,6 @@ header {
     left: 0;
     right: 0;
     z-index: 20;
-    width: 100vw;
 }
 
 .header-container {
