--- a/sass/components/_mobil-menu.scss
+++ b/sass/components/_mobil-menu.scss
@@ -7,7 +7,9 @@
   height: 50vh;
   background-color: getColor("third");
   transform: translateX(100%);
-  transition: transform 0.3s ease-in-out;
+  visibility: hidden;
+  opacity: 0;
+  transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out, opacity 0.3s ease-in-out;
 
   &__menu-close {
     position: absolute;
@@ -42,4 +44,6 @@
 
 .is-open {
   transform: translateX(0);
+  visibility: visible;
+  opacity: 1;
 }
