--- a/sass/components/_section-about.scss
+++ b/sass/components/_section-about.scss
@@ -39,6 +39,12 @@
     }
 }
 
+@media #{$tablet} {
+    #about {
+        padding-top: 120px;
+    }
+}
+
 @media #{$desktop} {
     #about {
         padding-top: 200px;
