--- a/sass/components/_section-mainPage.scss
+++ b/sass/components/_section-mainPage.scss
@@ -1,3 +1,7 @@
+body #main-page {
+    overflow-x: hidden;
+}
+
 #main-page {
     padding-top: 80px;
 }
@@ -55,6 +59,7 @@
 .carousel {
     width: 100%;
     margin: 65px 0 60px 0;
+
 
     &__track {
         display: flex;
